[gd_scene load_steps=13 format=3 uid="uid://2xng5iqxysgp"]

[ext_resource type="Script" uid="uid://cqr1p7w2g45gh" path="res://content/scenes/main/main.gd" id="1_55rk4"]
[ext_resource type="PackedScene" uid="uid://b30w6tywfj4fp" path="res://addons/mars-ui/content/system/controller_left/controller_left.tscn" id="2_5cg1x"]
[ext_resource type="PackedScene" uid="uid://biu66ihmvmku3" path="res://addons/mars-ui/content/system/controller_right/controller_right.tscn" id="3_8bjds"]
[ext_resource type="Environment" uid="uid://kvhlukn86wek" path="res://addons/mars-ui/assets/environment_passthrough.tres" id="5_rett8"]
[ext_resource type="PackedScene" uid="uid://ctltchlf2j2r4" path="res://addons/xr-simulator/XRSimulator.tscn" id="7_omfkv"]
[ext_resource type="PackedScene" uid="uid://dy2tcoqvgf0gl" path="res://content/scenes/orbiting_body/orbiting_body.tscn" id="8_tm0pk"]
[ext_resource type="AudioStream" uid="uid://2vh07xq86rer" path="res://content/assets/music/Space-The_Mountain.mp3" id="9_4o6td"]
[ext_resource type="PackedScene" uid="uid://31h07126r0qd" path="res://content/scenes/menu/menu_main.tscn" id="10_ikula"]
[ext_resource type="PackedScene" uid="uid://clc5dre31iskm" path="res://addons/godot-xr-tools/xr/start_xr.tscn" id="10_vverm"]
[ext_resource type="PackedScene" uid="uid://dkfi865sp5164" path="res://addons/mars-ui/content/ui/components/info_nodes/info_node_screen/info_node_screen.tscn" id="11_8ofab"]
[ext_resource type="Script" uid="uid://bsiv2p08o35qw" path="res://content/scenes/main/main_menu_tracker.gd" id="12_qv2iw"]
[ext_resource type="PackedScene" uid="uid://gs122858j0nd" path="res://addons/mars-ui/content/ui/components/info_nodes/display_screen/display_screen.tscn" id="12_xl8ae"]

[node name="Main" type="Node3D"]
script = ExtResource("1_55rk4")

[node name="AudBGM" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_4o6td")
volume_db = -30.0
autoplay = true
parameters/looping = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0.000440091, -0.000161113, -0.000439484, 0.999993, 0.00374974, 0.000162764, -0.00374966, 0.999993, 0.12413, 1.59506, 2.54726)
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("5_rett8")

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
current = true
far = 100000.0

[node name="XRControllerLeft" parent="XROrigin3D" instance=ExtResource("2_5cg1x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 1, 0)

[node name="XRControllerRight" parent="XROrigin3D" instance=ExtResource("3_8bjds")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 1, 0)

[node name="StartXR" parent="." instance=ExtResource("10_vverm")]

[node name="XRSimulator" parent="." instance=ExtResource("7_omfkv")]

[node name="Simulation" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -2)

[node name="CentralBody" parent="Simulation" instance=ExtResource("8_tm0pk")]
unique_name_in_owner = true
visible = false

[node name="MainMenuTracker" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
script = ExtResource("12_qv2iw")

[node name="MainMenu" parent="MainMenuTracker" instance=ExtResource("10_ikula")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, -0.4, -0.35)

[node name="InfoNodeScreen" parent="MainMenuTracker" instance=ExtResource("11_8ofab")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0947552, -0.133997, -0.454001)

[node name="DisplayScreen" parent="MainMenuTracker/InfoNodeScreen" instance=ExtResource("12_xl8ae")]
